# Ramadan_Coding_Nights

./: README.md
01_todo-cli/: README.md  todo.py
02_unit-converter/: README.md
03_password-generater/: README.md
04_fastAPI/: README.md
05_money-making-machine/: README.md  main.py
06_time-zone-app/: README.md
07_mood-tracker/: README.md  main.py  mood_log.csv  pyproject.toml
08_quiz-app/: README.md  main.py  pyproject.toml
09_deployment-fastAPI/: fastapi.py  pyproject.toml  streamlit.py
10_simple-calculator/: README.md  main.py  pyproject.toml
11_personal_library/: README.md  books_data.json
12_random_joke_generator/: README.md  main.py  pyproject.toml
13_simple-chatbot/: .gitignore  README.md  pyproject.toml
14_qa-chatbot/: .env  README.md  pyproject.toml  terminal.py
15_chatbot-authentication/: .gitignore  README.md  main.py  pyproject.toml
16_simple_agent/: README.md  pyproject.toml
17_advance-agent/: README.md  async.py  main.py  pyproject.toml
password-generater/: README.md  password.py
simple-api/: README.md  main.py
time-zone-app/: main.py
todo-cli/: README.md  todo.json
unit-converter/: README.md  unit_converter.py
